recursion.lessons.recursion.koch.Koch.scala.error
Koch:18: error: not found: value angle
		droite(angle)
                       ^